tests/shouldFail/process-undefined_rate.bc
//EXPECTED BEHAVIOUR:
//throw an error that the rate variable is undefined

//WHAT IT TESTS:
// -we should throw an error and gracefully exit if a rate variable is undefined

definedVar = 1.0;

Proc[i] = {testAction,undefinedVar}.{testAction2, definedVar};

//system 
Proc[0];